--- a/html/Git.html
+++ b/html/Git.html
@@ -5,10 +5,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-<p>
+<ul>
+<li>
 CRLF/LF problem, check <a href="http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf">this</a> out.
+</li>
+<li>
+Viewing the Commit History, <a href="http://progit.org/book/ch2-3.html">here</a>.
+</li>
+</ul>
 <hr />
-Last Modified: October 03, 2011 12:51:25 
+<p>
+Last Modified: October 03, 2011 13:10:09 
 </p>
 
 </body>
