--- a/html/Git.html
+++ b/html/Git.html
@@ -5,6 +5,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
+<p>
+<a href="http://progit.org/book/">Pro Git</a>, THE tutorial.
+</p>
+
 <ul>
 <li>
 CRLF/LF problem, check <a href="http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf">this</a> out.
@@ -15,7 +19,7 @@ Viewing the Commit History, <a href="http://progit.org/book/ch2-3.html">here</a>
 </ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 13:10:09 
+Last Modified: October 03, 2011 13:57:23 
 </p>
 
 </body>
