--- a/html/Git.html
+++ b/html/Git.html
@@ -17,9 +17,16 @@ CRLF/LF problem, check <a href="http://stackoverflow.com/questions/1967370/git-r
 Viewing the Commit History, <a href="http://progit.org/book/ch2-3.html">here</a>.
 </li>
 </ul>
+
+<h2 id="toc_0.1">Frequently Used Commands</h2>
+<ul>
+<li>
+git show --pretty="format:" --name-only
+</li>
+</ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 13:57:23 
+Last Modified: October 03, 2011 14:00:31 
 </p>
 
 </body>
