--- a/html/Git.html
+++ b/html/Git.html
@@ -16,17 +16,28 @@ CRLF/LF problem, check <a href="http://stackoverflow.com/questions/1967370/git-r
 <li>
 Viewing the Commit History, <a href="http://progit.org/book/ch2-3.html">here</a>.
 </li>
+<li>
+Alias: <a href="http://progit.org/book/ch2-7.html">http://progit.org/book/ch2-7.html</a>
+</li>
 </ul>
 
 <h2 id="toc_0.1">Frequently Used Commands</h2>
 <ul>
 <li>
-git show --pretty="format:" --name-only
+git show --pretty="format:" --name-only % alias lf (last files)
 </li>
+<li>
+git commit -a -m % alias comm
+</li>
+<ul>
+<li>
+git comm 'MSG' --amend
+</li>
+</ul>
 </ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 14:00:31 
+Last Modified: October 03, 2011 14:06:14 
 </p>
 
 </body>
