--- a/html/Git.html
+++ b/html/Git.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <p>
+I automatically push my entire wiki to <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>.
+</p>
+
+<p>
 <a href="http://progit.org/book/">Pro Git</a>, THE tutorial.
 </p>
 
@@ -37,7 +41,7 @@ git comm 'MSG' --amend
 </ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 14:06:14 
+Last Modified: October 03, 2011 14:11:55 
 </p>
 
 </body>
