--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 <h2 id="toc_1.1">ME</h2>
 <ul>
 <li>
-<a href="me.html">About Me</a>
+<a href="me.html">About Me</a>. <a href="About.html">About this Wiki</a>.
 </li>
 <li>
 <a href="Reading.html">My Reading</a>
@@ -125,7 +125,7 @@ Besides, I use many Web 2.0 applications that make life easier.
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 03, 2011 12:51:07 
+Last Modified: October 03, 2011 14:15:41 
 </p>
 
 </body>
