--- a/html/Git.html
+++ b/html/Git.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>
-I automatically push my entire wiki to <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>.
+I automatically push my entire wiki to <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>. Check out how <a href="About.html">Here</a>.
 </p>
 
 <p>
@@ -41,7 +41,7 @@ git comm 'MSG' --amend
 </ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 14:11:55 
+Last Modified: October 03, 2011 15:00:55 
 </p>
 
 </body>
