--- a/html/Git.html
+++ b/html/Git.html
@@ -23,6 +23,9 @@ Viewing the Commit History, <a href="http://progit.org/book/ch2-3.html">here</a>
 <li>
 Alias: <a href="http://progit.org/book/ch2-7.html">http://progit.org/book/ch2-7.html</a>
 </li>
+<li>
+Dealing with “non-fast-forward” errors: check out the "Dealing with “non-fast-forward” errors" section <a href="http://help.github.com/remotes/">here</a>.
+</li>
 </ul>
 
 <h2 id="toc_0.1">Frequently Used Commands</h2>
@@ -41,7 +44,7 @@ git comm 'MSG' --amend
 </ul>
 <hr />
 <p>
-Last Modified: October 03, 2011 15:00:55 
+Last Modified: October 03, 2011 15:16:31 
 </p>
 
 </body>
