--- a/html/About.html
+++ b/html/About.html
@@ -30,16 +30,37 @@ git push
 </ol>
 
 <p>
-And boom. My files are instantaneously tracked and uploaded.
+And boom. My files are instantaneously tracked and uploaded to Github. To upload them to my website server requires several slightly different commands:
 </p>
 
+<ol>
+<li>
+git add and git comm as above
+</li>
+<li>
+git push myserver master
+</li>
+<li>
+(on my server) git reset --hard
+</li>
+</ol>
+
 <p>
-There is one major drawback with this combination of tools: Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
+There is two major drawback with this combination of tools: 
 </p>
+
+<ol>
+<li>
+Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
+</li>
+<li>
+The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.
+</li>
+</ol>
 
 <hr />
 <p>
-Last Modified: October 03, 2011 14:48:59 
+Last Modified: October 04, 2011 13:51:39 
 </p>
 
 </body>
