--- a/html/About.html
+++ b/html/About.html
@@ -46,7 +46,7 @@ git push myserver master
 </ol>
 
 <p>
-There is two major drawback with this combination of tools: 
+There are two major drawbacks with this combination of tools: 
 </p>
 
 <ol>
@@ -60,7 +60,7 @@ The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I e
 
 <hr />
 <p>
-Last Modified: October 04, 2011 13:51:39 
+Last Modified: October 04, 2011 13:57:27 
 </p>
 
 </body>
