--- a/html/About.html
+++ b/html/About.html
@@ -16,34 +16,20 @@ Dropbox. Dropbox enables me to crowd-store my files. Leaving important files sol
 <p>
 Git and Github. Generally, after I editted an existed .wiki file or created a new one, I did the following commands to make sure Git tracks my progress and push the files to Github:
 </p>
-
-<ol>
-<li>
+<blockquote>
 git add . % if I created new files
-</li>
-<li>
 git comm 'MESSAGE' % or sometimes git comm 'MESSAGE' --amend
-</li>
-<li>
 git push
-</li>
-</ol>
+</blockquote>
 
 <p>
 And boom. My files are instantaneously tracked and uploaded to Github. To upload them to my website server requires several slightly different commands:
 </p>
-
-<ol>
-<li>
+<blockquote>
 git add and git comm as above
-</li>
-<li>
 git push myserver master
-</li>
-<li>
 (on my server) git reset --hard
-</li>
-</ol>
+</blockquote>
 
 <p>
 There are two major drawbacks with this combination of tools: 
@@ -60,7 +46,7 @@ The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I e
 
 <hr />
 <p>
-Last Modified: October 04, 2011 13:57:27 
+Last Modified: October 04, 2011 18:29:36 
 </p>
 
 </body>
