--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 <h2 id="toc_1.1">ME</h2>
 <ul>
 <li>
-<a href="me.html">About Me</a>. <a href="About.html">About this Wiki</a>.
+<a href="me.html">About Me</a>
 </li>
 <li>
 <a href="Reading.html">My Reading</a>
@@ -101,8 +101,13 @@ Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art
 <a href="Irssi.html">Irssi</a>, a solid <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a> client.
 </li>
 <li>
-<a href="Git.html">Git</a>. I'm learning this powerful VCS.
+<a href="Git.html">Git</a>. I'm learning this powerful VCS. 
 </li>
+<ul>
+<li>
+Check out how I use Git to maintain this Wiki here: <a href="About.html">About</a>.
+</li>
+</ul>
 </ul>
 
 <h2 id="toc_1.4">Devices</h2>
@@ -124,7 +129,7 @@ Besides, I use many Web 2.0 applications that make life easier.
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 03, 2011 14:15:41 
+Last Modified: October 04, 2011 18:29:40 
 </p>
 
 </body>
