--- a/html/About.html
+++ b/html/About.html
@@ -17,8 +17,8 @@ Dropbox. Dropbox enables me to crowd-store my files. Leaving important files sol
 Git and Github. Generally, after I editted an existed .wiki file or created a new one, I did the following commands to make sure Git tracks my progress and push the files to Github:
 </p>
 <blockquote>
-git add . % if I created new files
-git comm 'MESSAGE' % or sometimes git comm 'MESSAGE' --amend
+git add . % if I created new files<br />
+git comm 'MESSAGE' % or sometimes git comm 'MESSAGE' --amend<br />
 git push
 </blockquote>
 
@@ -26,8 +26,8 @@ git push
 And boom. My files are instantaneously tracked and uploaded to Github. To upload them to my website server requires several slightly different commands:
 </p>
 <blockquote>
-git add and git comm as above
-git push myserver master
+git add and git comm as above<br />
+git push myserver master<br />
 (on my server) git reset --hard
 </blockquote>
 
