--- a/html/index.html
+++ b/html/index.html
@@ -15,15 +15,11 @@ My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http
 </p>
 
 <p>
-This personal Wiki is constructed and maintained with <a href="http://www.vim.org/">Vim</a> + <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, which mean I can add something to my personal knowledge base within no more than 10 additional keystrokes, and yes, no mouse needed.
+This personal Wiki is constructed and maintained with <a href="http://www.vim.org/">Vim</a> + <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> + <a href="http://git-scm.com">Git</a> and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed!
 </p>
 
 <p>
 The Wiki records various aspects of my life and presents some of my interests.
-</p>
-
-<p>
-<a href="My Online Profile.html">My Online Profile</a>: This page contains what I share online.
 </p>
 
 <h2 id="toc_1.1">ME</h2>
@@ -129,7 +125,7 @@ Besides, I use many Web 2.0 applications that make life easier.
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 04, 2011 18:29:40 
+Last Modified: October 04, 2011 18:35:52 
 </p>
 
 </body>
