--- a/html/About.html
+++ b/html/About.html
@@ -5,6 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
+<h1 id="toc_1">About</h1>
+
 <p>
 This entire Wiki is maintained with several fantastic tools. The primary ones are <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> and <a href="http://www.vim.org/">Vim</a>. Some supplementary tools those make life eaiser (or those insidiously move me toward the purely technical end...) are <a href="http://www.dropbox.com/">Dropbox</a>, <a href="http://git-scm.com/">Git</a>, and <a href="https://github.com/">Github</a>.
 </p>
