--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
 <p>
+testing...
 <img src="http://geotakucovi.com/avatar.jpg" alt="Avatar" />
 </p>
 
