--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,13 @@
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
 <p>
 testing...
+</p>
+
+<p>
+test 
+</p>
+
+<p>
 <img src="http://geotakucovi.com/avatar.jpg" alt="Avatar" />
 </p>
 
