--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,10 @@ t....................est !!!!!!!!!hjdsh
 </p>
 
 <p>
+tre
+</p>
+
+<p>
 <img src="http://geotakucovi.com/avatar.jpg" alt="Avatar" />
 </p>
 
