--- a/html/About.html
+++ b/html/About.html
@@ -12,11 +12,11 @@ This entire Wiki is maintained with several fantastic tools. The primary ones ar
 </p>
 
 <p>
-Dropbox. Dropbox enables me to crowd-store my files. Leaving important files solely in your hard drive is a dangerous decision. I lost a laptop along with tons of invaluable files once. Dropbox solves the problem.
+<strong>Dropbox</strong>. Dropbox enables me to crowd-store my files. Leaving important files solely in your hard drive is a dangerous decision. I lost a laptop along with tons of invaluable files once. Dropbox solves the problem.
 </p>
 
 <p>
-Git and Github. Generally, after I editted an existed .wiki file or created a new one, I did the following commands to make sure Git tracks my progress and push the files to Github:
+<strong>Git and Github</strong>. Generally, after I editted an existed .wiki file or created a new one, I did the following commands to make sure Git tracks my progress and push the files to Github:
 </p>
 <blockquote>
 git add . % if I created new files<br />
@@ -42,13 +42,13 @@ There are two major drawbacks with this combination of tools:
 Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
 </li>
 <li>
-The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.
+<del>The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.</del> <strong>Solution</strong>: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.
 </li>
 </ol>
 
 <hr />
 <p>
-Last Modified: October 04, 2011 18:29:36 
+Last Modified: October 05, 2011 10:38:25 
 </p>
 
 </body>
