--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 <a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
 </li>
 <li>
-Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>.
+Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Combinatorics.html">Combinatorics</a>.
 </li>
 </ul>
 
@@ -126,7 +126,7 @@ Besides, I use many Web 2.0 applications that make life easier.
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 05, 2011 10:36:03 
+Last Modified: October 09, 2011 10:15:20 
 </p>
 
 </body>
