--- a/html/NOIP Notes.html
+++ b/html/NOIP Notes.html
@@ -35,5 +35,17 @@ SQL
 </li>
 </ul>
 
+<p>
+进制转换
+</p>
+<ul>
+<li>
+k 转 10: 整数部分和小数部分直接乘 k 的次幂
+</li>
+<li>
+10 转 k: 整数部分做除法逆向取余, 小数部分乘 k 正向取整数部分
+</li>
+</ul>
+
 </body>
 </html>
