--- a/html/Combinatorics.html
+++ b/html/Combinatorics.html
@@ -18,6 +18,9 @@ number of non-empty partitions of n elements
 <li>
 strong resemblance to 2nd Kind Stirling Number: B_n = sum{S(n, k)}.
 </li>
+<li>
+Calculation: Bell's Triangle
+</li>
 </ul>
 
 <p>
@@ -37,7 +40,7 @@ E(n, k) = (k + 1)E(n - 1, k) + (n - k)E(n - 1, k - 1)
 
 <hr />
 <p>
-Last Modified: October 09, 2011 10:18:15 
+Last Modified: October 09, 2011 10:41:35 
 </p>
 
 </body>
