--- a/html/NOIP Notes.html
+++ b/html/NOIP Notes.html
@@ -47,5 +47,26 @@ k 转 10: 整数部分和小数部分直接乘 k 的次幂
 </li>
 </ul>
 
+<p>
+赛事
+</p>
+<ul>
+<li>
+NOI 比 IOI 早 5 年举行
+</li>
+</ul>
+
+<p>
+硬件
+</p>
+<ul>
+<li>
+随机存取存储器 RAM：断电不能保存数据
+</li>
+<li>
+只读存储器 ROM：断电可以保存数据
+</li>
+</ul>
+
 </body>
 </html>
