--- a/html/music.html
+++ b/html/music.html
@@ -6,6 +6,17 @@
 </head>
 <body>
 <h1 id="toc_1">Music I love</h1>
+<p>
+<em>This page will be continually updated as I listen to some of the best impulses of this world...</em>
+</p>
+
+<p>
+Genres: Jazz and Chinese Pop.
+</p>
+
+<p>
+Artists: Miles Davis, John Coltrane.
+</p>
 
 <h2 id="toc_1.1">Pop Songs (Which I usually sing at KTV)</h2>
 <ol>
@@ -41,7 +52,7 @@ Empire State of Mind, Jay-Z.
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: Mar 25, 2011 15:01:12 
+Last Modified: October 14, 2011 14:13:10 
 </p>
 
 </body>
