--- a/html/NOIP Notes.html
+++ b/html/NOIP Notes.html
@@ -77,5 +77,26 @@ NOI 比 IOI 早 5 年举行
 </li>
 </ul>
 
+<p>
+反码
+</p>
+<ul>
+<li>
+正数的反码等于其原码，无需转换
+</li>
+<li>
+负数的反码：符号位不动，其余各位取反
+</li>
+</ul>
+
+<p>
+补码
+</p>
+<ul>
+<li>
+数字 a 的补码即为 -a
+</li>
+</ul>
+
 </body>
 </html>
