--- a/html/NOIP Notes.html
+++ b/html/NOIP Notes.html
@@ -69,32 +69,47 @@ NOI 比 IOI 早 5 年举行
 </ul>
 
 <p>
-原码
+原码, 反码, 补码
+<a href="http://www.hackbase.com/tech/2009-07-27/54264.html">http://www.hackbase.com/tech/2009-07-27/54264.html</a>
 </p>
 <ul>
 <li>
 最高有效位当成符号位，0 为 正，1 为负
 </li>
-</ul>
-
-<p>
-反码
-</p>
-<ul>
 <li>
-正数的反码等于其原码，无需转换
+正数的原、反、补一样
 </li>
 <li>
 负数的反码：符号位不动，其余各位取反
 </li>
+<li>
+负数的补码：其反码+1
+</li>
 </ul>
 
 <p>
-补码
+基数排序
 </p>
 <ul>
 <li>
-数字 a 的补码即为 -a
+将所有待比较数值(正整数)统一为同样的数位长度,数位较短的数前面补零. 然后, 从最低位开始, 依次进行一次排序.这样从最低位排序一直到最高位排序完成以后, 数列就变成一个有序序列.
+</li>
+<li>
+非原地排序
+</li>
+</ul>
+
+<p>
+稳定排序: 合并, 插入, 冒泡
+非稳定排序: 堆, 选择, 希尔, 快排(说是 depends，但可以认为是 unstable)
+</p>
+
+<p>
+Java
+</p>
+<ul>
+<li>
+既可被解释，也可被编译
 </li>
 </ul>
 
