--- a/html/music.html
+++ b/html/music.html
@@ -15,7 +15,7 @@ Genres: Jazz and Chinese Pop.
 </p>
 
 <p>
-Artists: Miles Davis, John Coltrane.
+Artists: Miles Davis, John Coltrane, 陈奕迅 (Eason Chan)
 </p>
 
 <h2 id="toc_1.1">Pop Songs (Which I usually sing at KTV)</h2>
@@ -52,7 +52,7 @@ Empire State of Mind, Jay-Z.
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: October 14, 2011 14:13:10 
+Last Modified: October 14, 2011 19:44:54 
 </p>
 
 </body>
