--- a/html/Graph Theory and Algorithms.html
+++ b/html/Graph Theory and Algorithms.html
@@ -11,9 +11,9 @@
 </p>
 
 <p>
-Minimum Spanning Tree: <a href="Prim.html">Prim</a>.
+Minimum Spanning Tree: <a href="Prim.html">Prim</a>. <a href="Kruskal.html">Kruskal</a>.
 <hr />
-Last Modified: October 14, 2011 20:49:37 
+Last Modified: October 14, 2011 22:52:52 
 </p>
 
 </body>
