--- a/html/NOIP Notes.html
+++ b/html/NOIP Notes.html
@@ -100,7 +100,7 @@ NOI 比 IOI 早 5 年举行
 </ul>
 
 <p>
-稳定排序: 合并, 插入, 冒泡
+稳定排序: 合并, 插入, 冒泡, 基数
 非稳定排序: 堆, 选择, 希尔, 快排(说是 depends，但可以认为是 unstable)
 </p>
 
@@ -110,6 +110,18 @@ Java
 <ul>
 <li>
 既可被解释，也可被编译
+</li>
+</ul>
+
+<p>
+内存分类
+</p>
+<ul>
+<li>
+易失性：RAM
+</li>
+<li>
+不易失性：ROM, 闪存
 </li>
 </ul>
 
