--- a/html/Graph Theory and Algorithms.html
+++ b/html/Graph Theory and Algorithms.html
@@ -12,8 +12,12 @@
 
 <p>
 Minimum Spanning Tree: <a href="Prim.html">Prim</a>. <a href="Kruskal.html">Kruskal</a>.
+</p>
+
+<p>
+Strongly connected: A directed graph is called strongly connected if there is a path from each vertex in the graph to every other vertex.
 <hr />
-Last Modified: October 14, 2011 22:52:52 
+Last Modified: October 15, 2011 10:16:01 
 </p>
 
 </body>
