test vimwiki mathjax

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,17 @@
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
 
 <p>
+dasdasdasdasd
+..$E = mc^2$
+</p>
+
+<p>
+{{$
+\sum_{i=1}^N a_i^2 = \infty
+}}$
+</p>
+
+<p>
 <img src="http://geotakucovi.com/avatar.jpg" alt="Avatar" />
 </p>
 
@@ -130,4 +141,7 @@ Last Modified: October 14, 2011 20:52:27
 </p>
 
 </body>
+
+<script type="text/javascript" src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 </html>
