--- a/html/Sol To DP Book.html
+++ b/html/Sol To DP Book.html
@@ -12,26 +12,50 @@ The Art and Theory of Dynamic Programming (<a href="http://www.amazon.com/dynami
 
 <h1 id="toc_2">The Solutions</h1>
 
-<pre>
-1.1
-Let S(x, y) be the smallest distance from Point A (0, 0) to (x, y), and a_d(x, y)/a_u(x, y) be the distance of the arc down/up from (x, y).
-S(0, 0) = 0; Final answer: min{S(4, j)}
-S(x, y) = min{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)}
+<h2 id="toc_2.1">1.1</h2>
 
-1.2
-In addition to 1.1, denote r(x, y) as the "bonus value" at (x, y); all r(x, y) = 0 except those specified by the problem.
-
-S(x, y) = min{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)} + r(x, y).
-
-1.3
-Notice the definition of N: Fig 1.3 is actually a N=4 case.
-
-DP requires $2N + (\frac{N(N + 1)}{2} - 2N)*2 = n^2 - n$ additions, and $(\frac{N(N + 1)}{2} - 2N) + N$ comparisons; Brute-force computes $2^N$ paths and thus requires $N \cdot 2^N$ additions and $2^N - 1$ comparisons.
-</pre>
-<hr />
 <p>
-Last Modified: October 21, 2011 21:22:34 
+Let $S(x, y)$ be the smallest distance from Point $A(0, 0)$ to $(x, y)$, and $a_d(x, y)$/$a_u(x, y)$ be the distance of the arc down/up from $(x, y)$.
+$S(0, 0) = 0$; Final answer: $min{S(4, j)}$
+</p>
+
+<p>
+$S(x, y) = min{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)}$
+</p>
+
+<h2 id="toc_2.2">1.2</h2>
+
+<p>
+In addition to 1.1, denote $r(x, y)$ as the "bonus value" at $(x, y)$; all $r(x, y) = 0$ except those specified by the problem.
+</p>
+
+<p>
+$S(x, y) = min{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)} + r(x, y).$
+</p>
+
+<h2 id="toc_2.3">1.3</h2>
+
+<p>
+Notice the definition of N: Fig 1.3 is actually a N=4 case.
+</p>
+
+<p>
+DP requires $2N + (\frac{N(N + 1)}{2} - 2N)*2 = n^2 - n$ additions, and $(\frac{N(N + 1)}{2} - 2N) + N$ comparisons; Brute-force computes $2^N$ paths and thus requires $N \cdot 2^N$ additions and $2^N - 1$ comparisons.
+<hr />
+Last Modified: October 21, 2011 23:35:45 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ]
+    }
+  });
+</script>
+
 </html>
