--- a/html/Sol To DP Book.html
+++ b/html/Sol To DP Book.html
@@ -20,7 +20,7 @@ $S(0, 0) = 0$; Final answer: $min{S(4, j)}$
 </p>
 
 <p>
-$S(x, y) = min{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)}$
+$S(x, y) = min\{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)\}.$
 </p>
 
 <h2 id="toc_2.2">1.2</h2>
@@ -30,7 +30,7 @@ In addition to 1.1, denote $r(x, y)$ as the "bonus value" at $(x, y)$; all $r(x,
 </p>
 
 <p>
-$S(x, y) = min{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)} + r(x, y).$
+$S(x, y) = min\{a_d(x - 1, y + 1) + S(x - 1, y + 1), a_u(x - 1, y - 1) + S(x - 1, y - 1)\} + r(x, y).$
 </p>
 
 <h2 id="toc_2.3">1.3</h2>
@@ -42,7 +42,7 @@ Notice the definition of N: Fig 1.3 is actually a N=4 case.
 <p>
 DP requires $2N + (\frac{N(N + 1)}{2} - 2N)*2 = n^2 - n$ additions, and $(\frac{N(N + 1)}{2} - 2N) + N$ comparisons; Brute-force computes $2^N$ paths and thus requires $N \cdot 2^N$ additions and $2^N - 1$ comparisons.
 <hr />
-Last Modified: October 21, 2011 23:35:45 
+Last Modified: October 22, 2011 09:56:23 
 </p>
 
 </body>
@@ -53,7 +53,8 @@ Last Modified: October 21, 2011 23:35:45
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ]
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
     }
   });
 </script>
