--- a/html/index.html
+++ b/html/index.html
@@ -122,14 +122,10 @@ Check out how I use Git to maintain this Wiki here: <a href="About.html">About</
 <img src="http://geotakucovi.com/mail0.png" />
 </p>
 
-<p>
-Besides, I use many Web 2.0 applications that make life easier.
-</p>
-
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 21, 2011 22:58:43 
+Last Modified: October 22, 2011 10:13:55 
 </p>
 
 </body>
@@ -140,7 +136,8 @@ Last Modified: October 21, 2011 22:58:43
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ]
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
     }
   });
 </script>
