index and about

--- a/html/index.html
+++ b/html/index.html
@@ -102,7 +102,7 @@ Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art
 </li>
 <ul>
 <li>
-Check out how I use Git to maintain this Wiki here: <a href="About.html">About</a>.
+Check out how I use Git, Vimwiki, cron, and several other fantastic tools to maintain this Wiki here: <a href="About.html">About the Maintenance of this Personal Knowledge Base</a>.
 </li>
 </ul>
 <li>
