--- a/html/About.html
+++ b/html/About.html
@@ -29,7 +29,7 @@ And boom. My files are instantaneously tracked and uploaded to Github. To upload
 </p>
 <blockquote>
 git add and git comm as above<br />
-git push myserver master<br />
+git push myserver<br />
 (on my server) git reset --hard
 </blockquote>
 
@@ -42,7 +42,7 @@ There are two major drawbacks with this combination of tools:
 Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
 </li>
 <li>
-<del>The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.</del> ~~<strong>Solution</strong>: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.~~
+<del>The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.</del> ~~Solution: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.~~
 </li>
 </ol>
 
@@ -53,7 +53,7 @@ There's a better solution than the above: ask <strong>cron</strong> to run <code
 
 <hr />
 <p>
-Last Modified: October 22, 2011 10:11:15 
+Last Modified: October 22, 2011 10:17:44 
 </p>
 
 </body>
