--- a/html/About.html
+++ b/html/About.html
@@ -42,18 +42,22 @@ There are two major drawbacks with this combination of tools:
 Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
 </li>
 <li>
-<del>The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.</del> ~~Solution: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.~~
+<del>The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.</del> 
 </li>
+<ul>
+<li>
+(<strong>OBSOLETE</strong>) Solution: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.~~
+</li>
+</ul>
 </ol>
 
 <p>
-Oct 22, 2011 <strong>Update</strong>
-There's a better solution than the above: ask <strong>cron</strong> to run <code>./git</code> command every 10 minutes. Life saved.
+Oct 22, 2011 <strong>Update</strong>: There's a better solution than the above: ask <strong>cron</strong> to run <code>./git</code> command every 10 minutes. Life saved.
 </p>
 
 <hr />
 <p>
-Last Modified: October 22, 2011 10:17:44 
+Last Modified: October 22, 2011 10:22:15 
 </p>
 
 </body>
