--- a/html/About.html
+++ b/html/About.html
@@ -46,7 +46,7 @@ Github does not correctly regonize Vimwiki format/markup. The effect is if I rea
 </li>
 <ul>
 <li>
-(<strong>OBSOLETE</strong>) Solution: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.~~
+(<strong>OBSOLETE</strong>) Solution: run <code>ssh user@domain.com ./git</code> directly in my Git Bash, and the nice little shell script <code>git</code> I wrote does the <code>cd</code> and <code>reset --hard</code> stuff.
 </li>
 </ul>
 </ol>
@@ -57,7 +57,7 @@ Oct 22, 2011 <strong>Update</strong>: There's a better solution than the above: 
 
 <hr />
 <p>
-Last Modified: October 22, 2011 10:22:15 
+Last Modified: October 22, 2011 12:35:18 
 </p>
 
 </body>
