mathematician-language problem

--- a/html/Combinatorics.html
+++ b/html/Combinatorics.html
@@ -5,6 +5,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
+<h1 id="toc_1">Combinatorics</h1>
+
+<h2 id="toc_1.1">Special Numbers</h2>
 <p>
 Bell Number
 </p>
@@ -38,10 +41,30 @@ E(n, k) = (k + 1)E(n - 1, k) + (n - k)E(n - 1, k - 1)
 </li>
 </ul>
 
+<h2 id="toc_1.2">Problems</h2>
+<ul>
+<li>
+<a href="mathematician-language problem.html">mathematician-language problem</a>.
+</li>
+</ul>
+
 <hr />
 <p>
-Last Modified: October 09, 2011 10:41:35 
+Last Modified: October 22, 2011 21:49:09 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
