--- a/html/Math.html
+++ b/html/Math.html
@@ -17,7 +17,7 @@
 </ul>
 
 <p>
-<a href="calculus.html">Calculus</a>
+<a href="calculus.html">Calculus</a> <a href="Combinatorics.html">Combinatorics</a>
 </p>
 
 <p>
@@ -63,8 +63,21 @@ Newton's series.
 <a href="http://math.stackexchange.com/questions/27480/what-are-good-books-to-learn-graph-theory">Graph Theory</a> <a href="http://math.stackexchange.com/questions/15201/good-book-on-combinatorics">Combinatorics</a> <a href="Set Theory.html">Set Theory</a>
 <hr />
 Date Created: Feb 19, 2011 9:03:42<br />
-Last Modified: August 28, 2011 23:08:35 
+Last Modified: October 22, 2011 21:55:47 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
