--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,9 @@ The Wiki records various aspects of my life and presents some of my interests.
 <li>
 <a href="calculus.html">Calculus</a>, notes on calculus.
 </li>
+<li>
+<a href="Combinatorics.html">Combinatorics</a>, notes/problems/solutions/questions on combinatorics.
+</li>
 </ul>
 <li>
 <a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
@@ -74,7 +77,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 <a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
 </li>
 <li>
-Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Combinatorics.html">Combinatorics</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
+Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
 </li>
 </ul>
 
@@ -125,7 +128,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 22, 2011 10:13:55 
+Last Modified: October 22, 2011 21:54:59 
 </p>
 
 </body>
