--- a/html/Combinatorics.html
+++ b/html/Combinatorics.html
@@ -13,13 +13,13 @@ Bell Number
 </p>
 <ul>
 <li>
-number of non-empty partitions of n elements
+number of different partitions of n elements
 </li>
 <li>
 <a href="http://mathworld.wolfram.com/BellNumber.html">http://mathworld.wolfram.com/BellNumber.html</a>
 </li>
 <li>
-strong resemblance to 2nd Kind Stirling Number: B_n = sum{S(n, k)}.
+strong resemblance to 2nd Kind Stirling Number: $B_n = \sum_{k = 0}^{n} S(n, k)$.
 </li>
 <li>
 Calculation: Bell's Triangle
@@ -50,7 +50,7 @@ E(n, k) = (k + 1)E(n - 1, k) + (n - k)E(n - 1, k - 1)
 
 <hr />
 <p>
-Last Modified: October 22, 2011 21:49:09 
+Last Modified: October 22, 2011 22:04:02 
 </p>
 
 </body>
