--- a/html/Graph Theory and Algorithms.html
+++ b/html/Graph Theory and Algorithms.html
@@ -16,9 +16,27 @@ Minimum Spanning Tree: <a href="Prim.html">Prim</a>. <a href="Kruskal.html">Krus
 
 <p>
 Strongly connected: A directed graph is called strongly connected if there is a path from each vertex in the graph to every other vertex.
+</p>
+
+<h1 id="toc_2">Graph Theory Problems</h1>
+<p>
+<a href="mathematician-language problem.html">mathematician-language problem</a>  <a href="friends problem.html">friends problem</a>
 <hr />
-Last Modified: October 15, 2011 10:16:01 
+Last Modified: October 22, 2011 22:18:35 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
