--- a/html/Math.html
+++ b/html/Math.html
@@ -7,6 +7,17 @@
 <body>
 <h1 id="toc_1">Math</h1>
 
+<h2 id="toc_1.1">Problems Collection</h2>
+<ul>
+<li>
+<a href="mathematician-language problem.html">mathematician-language problem</a> (graph theory)
+</li>
+<li>
+<a href="friends problem.html">friends problem</a> (graph theory)
+</li>
+</ul>
+
+
 <p>
 <strong>Read List</strong>
 </p>
@@ -63,7 +74,7 @@ Newton's series.
 <a href="http://math.stackexchange.com/questions/27480/what-are-good-books-to-learn-graph-theory">Graph Theory</a> <a href="http://math.stackexchange.com/questions/15201/good-book-on-combinatorics">Combinatorics</a> <a href="Set Theory.html">Set Theory</a>
 <hr />
 Date Created: Feb 19, 2011 9:03:42<br />
-Last Modified: October 22, 2011 21:55:47 
+Last Modified: October 22, 2011 22:15:45 
 </p>
 
 </body>
