--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 <a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
 </li>
 <li>
-Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
+Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>. <a href="NOIP 2011 Prep.html">My Preparation for NOIP 2011</a>.
 </li>
 </ul>
 
