--- a/html/NOIP 2011 Prep.html
+++ b/html/NOIP 2011 Prep.html
@@ -15,9 +15,14 @@ Oct 28<br />
 SGU 175: simple math/simulation/backtracking/string.
 </p>
 
+<p>
+Oct 30<br />
+SGU 181: Wrong answer on test 39... $x_0 = A, x_i = (a * x_{i}^{2} + b * x_i + c) % M.$ Find $x_k$.
+</p>
+
 <hr />
 <p>
-Last Modified: October 28, 2011 16:18:40 
+Last Modified: October 30, 2011 23:02:32 
 </p>
 
 </body>
