--- a/html/NOIP 2011 Prep.html
+++ b/html/NOIP 2011 Prep.html
@@ -8,6 +8,11 @@
 <h1 id="toc_1">My Preparation for NOIP 2011</h1>
 <p>
 All codes will be pushed to here: <a href="https://github.com/concretevitamin/2011codes">https://github.com/concretevitamin/2011codes</a>.
+Check out my notes on my OI (Olympiad in Informatics) Blog: <a href="http://geotakucovi.com/oi/">http://geotakucovi.com/oi/</a>.
+</p>
+
+<p>
+<strong>REMEMBER TO USE -g WHEN COMPILING SO AS TO ENABLE DEBUGGING WITH GDB!</strong>
 </p>
 
 <p>
@@ -20,9 +25,14 @@ Oct 30<br />
 SGU 181: Wrong answer on test 39... $x_0 = A, x_i = (a * x_{i}^{2} + b * x_i + c) % M.$ Find $x_k$.
 </p>
 
+<p>
+DP<br />
+USACO 3.1.6 stamps (complete backpack variant); 3.1.2 inflate (complete backpack);
+</p>
+
 <hr />
 <p>
-Last Modified: October 30, 2011 23:02:32 
+Last Modified: November 03, 2011 13:12:13 
 </p>
 
 </body>
