--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,10 @@
 </p>
 
 <p>
+Lately (From Oct 31) I've been spending 5hrs+ in Library programming (<em>or hoping to program</em>) every day, and 3hrs in classroom every night. (<em>OMG I HAVE COLLEGE APPLICATIONS...</em>)
+</p>
+
+<p>
 My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http://www.shenzhong.net">Shenzhen Middle School</a>, Shenzhen, China (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps</a>). My usual nickname on the Web is <strong>Covi</strong>. If you need to contact me, my email is near the end of this page.
 </p>
 
@@ -128,7 +132,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: October 22, 2011 21:54:59 
+Last Modified: November 03, 2011 13:11:22 
 </p>
 
 </body>
