--- a/html/Movies.html
+++ b/html/Movies.html
@@ -116,11 +116,31 @@
 <em>The Great Debaters</em>, 2007.
 </li>
 </ul>
+
+<h2 id="toc_1.9">Nov, 2011</h2>
+<ul>
+<li>
+<em>American Gangster</em>, 2007.
+</li>
+</ul>
 <hr />
 <p>
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: October 16, 2011 19:52:30 
+Last Modified: November 07, 2011 09:45:55 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
