--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>Covi's Personal Knowledge Base Wiki</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
 </head>
 <body>
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
@@ -12,7 +12,9 @@
 </p>
 
 <p>
-Lately (From Oct 31) I've been spending 5hrs+ in Library programming (<em>or hoping to program</em>) every day, and 3hrs in classroom every night. (<em>OMG I HAVE COLLEGE APPLICATIONS...</em>)
+``The greater danger for most of us lies not in setting our aim too high
+and falling short; but in setting our aim too low, and achieving our
+mark.''
 </p>
 
 <p>
@@ -132,7 +134,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 03, 2011 13:11:22 
+Last Modified: November 14, 2011 08:50:15 
 </p>
 
 </body>
