--- a/html/music.html
+++ b/html/music.html
@@ -7,18 +7,27 @@
 <body>
 <h1 id="toc_1">Music I love</h1>
 <p>
-<em>This page will be continually updated as I listen to some of the best impulses of this world...</em>
+<em>I listen to some of the best impulses of this world...</em>
+</p>
+
+
+
+<p>
+<strong>Genres</strong>: Jazz and Chinese Pop.
 </p>
 
 <p>
-Genres: Jazz and Chinese Pop.
+<strong>Artists</strong>: Miles Davis, John Coltrane, 陈奕迅 (Eason Chan), Cannonball Adderley, Leehom Wong (王力宏)
 </p>
 
-<p>
-Artists: Miles Davis, John Coltrane, 陈奕迅 (Eason Chan)
-</p>
+<h2 id="toc_1.1">Jazz</h2>
+<ul>
+<li>
+<em>Autumn Leaves</em> in Cannonball Adderley's <em>Somethin' Else</em> is the <strong>most impressive</strong> jazz piece I've ever heard! 
+</li>
+</ul>
 
-<h2 id="toc_1.1">Pop Songs (Which I usually sing at KTV)</h2>
+<h2 id="toc_1.2">Pop Songs (Which I usually sing at KTV)</h2>
 <ol>
 <li>
 落花流水, 陈奕迅.  
@@ -47,13 +56,29 @@ Empire State of Mind, Jay-Z.
 <li>
 如果我变成回忆, TANK.
 </li>
+<li>
+爱是, 若兰.
+</li>
 </ol>
 
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: October 14, 2011 19:44:54 
+Last Modified: November 13, 2011 22:37:24 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
