--- a/html/music.html
+++ b/html/music.html
@@ -25,6 +25,9 @@
 <li>
 <em>Autumn Leaves</em> in Cannonball Adderley's <em>Somethin' Else</em> is the <strong>most impressive</strong> jazz piece I've ever heard! 
 </li>
+<li>
+John Coltrane's <em>Moment's Notice</em>: <a href="http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0">http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0</a>
+</li>
 </ul>
 
 <h2 id="toc_1.2">Pop Songs (Which I usually sing at KTV)</h2>
@@ -64,7 +67,7 @@ Empire State of Mind, Jay-Z.
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: November 13, 2011 22:37:24 
+Last Modified: November 14, 2011 09:47:28 
 </p>
 
 </body>
