--- a/html/Movies.html
+++ b/html/Movies.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>Movies I've Watched</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
 </head>
 <body>
 <h1 id="toc_1">Movies I've Watched</h1>
@@ -122,11 +122,20 @@
 <li>
 <em>American Gangster</em>, 2007.
 </li>
+<li>
+<em>Harry Potter and the Deathly Hallows Part 2</em>, 2011.
+</li>
+<li>
+<em>Harry Potter and the Deathly Hallows Part 1</em>, 2010.
+</li>
+<li>
+<em>Harry Potter and the Half Blood Prince</em>, 2009.
+</li>
 </ul>
 <hr />
 <p>
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: November 07, 2011 09:45:55 
+Last Modified: November 21, 2011 09:59:56 
 </p>
 
 </body>
