--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,7 @@
 </p>
 
 <p>
-``The greater danger for most of us lies not in setting our aim too high
-and falling short; but in setting our aim too low, and achieving our
-mark.''
+``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.''
 </p>
 
 <p>
@@ -41,10 +39,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 <a href="Movies.html">Movies I've watched</a>
 </li>
 <li>
-<a href="music.html">Music I love</a>
-</li>
-<li>
-<a href="Pastebin.html">My Pastebin for Random Stuff</a> (Only for personal use; not much value here.)
+<a href="music.html">Music I love</a>. Jazz. Cantonese Pop. Albums and Pieces.
 </li>
 </ul>
   
@@ -59,6 +54,9 @@ The Wiki records various aspects of my life and presents some of my interests.
 </li>
 <li>
 <a href="Combinatorics.html">Combinatorics</a>, notes/problems/solutions/questions on combinatorics.
+</li>
+<li>
+<a href="Modeling.html">Modeling</a>.
 </li>
 </ul>
 <li>
@@ -134,7 +132,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 14, 2011 08:50:15 
+Last Modified: November 20, 2011 22:38:45 
 </p>
 
 </body>
