--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,26 @@ The Wiki records various aspects of my life and presents some of my interests.
 </li>
 </ul>
 <li>
+Computer Science
+</li>
+<ul>
+<li>
+<a href="NOIP 2011 Prep.html">My Preparation for NOIP 2011</a>.
+</li>
+<li>
+<a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. 
+</li>
+<li>
+<a href="NOIP Notes.html">Some basic notes</a>. 
+</li>
+<li>
+<a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
+</li>
+<li>
+<a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
+</li>
+</ul>
+<li>
 <a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
 </li>
 <li>
@@ -76,12 +96,6 @@ The Wiki records various aspects of my life and presents some of my interests.
 </li>
 <li>
 <a href="Macroeconomics.html">Macroeconomics</a>.
-</li>
-<li>
-<a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
-</li>
-<li>
-Computer Science: <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. <a href="NOIP Notes.html">Some basic notes</a>. <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>. <a href="NOIP 2011 Prep.html">My Preparation for NOIP 2011</a>.
 </li>
 </ul>
 
@@ -132,7 +146,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 20, 2011 22:38:45 
+Last Modified: November 21, 2011 10:08:22 
 </p>
 
 </body>
