--- a/html/index.html
+++ b/html/index.html
@@ -16,11 +16,11 @@
 </p>
 
 <p>
-My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http://www.shenzhong.net">Shenzhen Middle School</a>, Shenzhen, China (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps</a>). My usual nickname on the Web is <strong>Covi</strong>. If you need to contact me, my email is near the end of this page.
+Hi! My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http://www.shenzhong.net">Shenzhen Middle School</a>, Shenzhen, China (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps</a>). 
 </p>
 
 <p>
-This personal Wiki is constructed and maintained with <a href="http://www.vim.org/">Vim</a> + <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> + <a href="http://git-scm.com">Git</a> and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed!
+This personal Wiki is constructed and maintained with <a href="http://www.vim.org/">Vim</a> + <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> + <a href="http://git-scm.com">Git</a> and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed! Check out more here: <a href="About.html">About</a>.
 </p>
 
 <p>
@@ -146,7 +146,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 21, 2011 10:08:22 
+Last Modified: November 21, 2011 10:10:54 
 </p>
 
 </body>
