--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 </p>
 
 <p>
-``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.''
+``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.'' -- Michelangelo Buonarroti
 </p>
 
 <p>
@@ -41,6 +41,9 @@ The Wiki records various aspects of my life and presents some of my interests.
 <li>
 <a href="music.html">Music I love</a>. Jazz. Cantonese Pop. Albums and Pieces.
 </li>
+<li>
+<a href="Pastebin.html">My Pastebin for Random Stuff</a> (Only for personal use; not much value here.) --&gt;
+</li>
 </ul>
   
 <h2 id="toc_1.2">Serious (or not so serious?) Stuff</h2>
@@ -63,6 +66,9 @@ The Wiki records various aspects of my life and presents some of my interests.
 Computer Science
 </li>
 <ul>
+<li>
+<a href="ProjectEuler.html">My Project Euler Codes</a>.
+</li>
 <li>
 <a href="NOIP 2011 Prep.html">My Preparation for NOIP 2011</a>.
 </li>
@@ -146,7 +152,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 21, 2011 10:10:54 
+Last Modified: November 23, 2011 08:15:22 
 </p>
 
 </body>
