--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,9 @@ Computer Science
 <li>
 <a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
 </li>
+<li>
+<a href="Python Notes.html">Python Notes</a>. I find learning Python a great break from college applications.
+</li>
 </ul>
 <li>
 <a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
@@ -149,7 +152,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 23, 2011 09:50:11 
+Last Modified: November 25, 2011 18:34:32 
 </p>
 
 </body>
