--- a/html/index.html
+++ b/html/index.html
@@ -84,6 +84,9 @@ Computer Science
 <li>
 <a href="Python Notes.html">Python Notes</a>. I find learning Python a great break from college applications.
 </li>
+<li>
+<a href="wordcount.html">wordcount.py, with interesting results!</a> wordcount.py is a small python program I wrote for fun. Check out the results!
+</li>
 </ul>
 <li>
 <a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
@@ -152,7 +155,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 25, 2011 18:34:32 
+Last Modified: November 26, 2011 10:27:22 
 </p>
 
 </body>
