--- a/html/wordcount.html
+++ b/html/wordcount.html
@@ -7,7 +7,7 @@
 <body>
 <h1 id="toc_1">wordcount.py and Some Interesting Results</h1>
 <p>
-<code>wordcount.py</code> is a tiny Python I wrote for fun, that counted the most frequent words in an article and their occurances. It supports arbitrary number of most frequent words.
+<code>wordcount.py</code> is a tiny Python program I wrote for fun, that counted the most frequent words in an article and their occurances. It supports arbitrary number of most frequent words.
 </p>
 
 <p>
@@ -103,7 +103,7 @@ Huge difference from all other three articles!
 <hr />
 <p>
 Created Date: November 26, 2011 10:34:46<br />
-Last Modified: November 26, 2011 10:53:31 
+Last Modified: November 26, 2011 11:02:07 
 </p>
 
 </body>
