--- a/html/music.html
+++ b/html/music.html
@@ -60,14 +60,20 @@ Empire State of Mind, Jay-Z.
 如果我变成回忆, TANK.
 </li>
 <li>
-爱是, 若兰.
+爱没有假如, 若兰. <a href="AiMeiYouJiaRu.html">Lyrics</a>
+</li>
+<li>
+哎呀咿呀, 陈奕迅.
+</li>
+<li>
+孤独患者, 陈奕迅. <a href="GuDuHuanZhe.html">Lyrics</a>
 </li>
 </ol>
 
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: November 14, 2011 09:47:28 
+Last Modified: November 28, 2011 22:56:21 
 </p>
 
 </body>
