--- a/html/Reading.html
+++ b/html/Reading.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>My Reading - Covi </title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
 </head>
 <body>
 <h1 id="toc_1">All About My Reading</h1>
@@ -15,37 +15,39 @@ This Sub-wiki contains my thoughts and notes when reading. It also records a lis
 These books and short passages are mostly read on <a href="Kindle.html">My Kindle</a>. Check to see how I <a href="A tricky yank task study.html">deal with notes and highlights on Kindle</a>. Some of them are assignments from my English II (Honor English) class.
 </p>
 
-<p>
-Reading: <a href="Walden.html">Walden</a> by Henry Thoreau, The Rational Optimist by Matt Ridley.
-</p>
-
 <h2 id="toc_1.1">American Literature</h2>
 <ul>
 <li>
-<a href="Ethan Frome.html">Ethan Frome</a>, by <a href="Edith Wharton.html">Edith Wharton</a>; finished in Dec 2010.
+Ethan Frome, by Edith Wharton; finished in Dec 2010.
 </li>
 <li>
-<a href="The Adventures of Huckleberry Finn.html">The Adventures of Huckleberry Finn</a>, by <a href="Mark Twain.html">Mark Twain</a>; finished on Jan 31, 2011.
+<a href="The Adventures of Huckleberry Finn.html">The Adventures of Huckleberry Finn</a>, by Mark Twain; finished on Jan 31, 2011.
 </li>
 <li>
 Great Gatsby, by F. Scott Fitzgerald.
 </li>
 </ul>
 
-<h2 id="toc_1.2">English Literature</h2>
-<ul>
-<li>
-<a href="Frankenstein.html">Frankenstein</a>, by <a href="Mary Shelley.html">Mary Shelley</a>; finished on Feb 4, 2011.
-</li>
-</ul>
-
-<h2 id="toc_1.3">Pieces, short fiction</h2>
+<h2 id="toc_1.2">Pieces, Essays, Short Stories</h2>
 <ul>
 <li>
 <a href="An Occurrence at Owl Creek Bridge.html">An Occurrence at Owl Creek Bridge</a>, Ambrose Bierce.
 </li>
 <li>
 <a href="A Mystery of Heroism.html">A Mystery of Heroism</a>, Stephen Crane.
+</li>
+<li>
+<em>Such, Such were the Joys</em>, George Orwell. (See also <a href="wordcount.html">here</a>.)
+</li>
+<li>
+<em>Why I Write</em>, George Orwell.
+</li>
+</ul>
+
+<h2 id="toc_1.3">English Literature</h2>
+<ul>
+<li>
+<a href="Frankenstein.html">Frankenstein</a>, by Mary Shelley; finished on Feb 4, 2011.
 </li>
 </ul>
 
@@ -58,8 +60,21 @@ Great Gatsby, by F. Scott Fitzgerald.
 
 <hr />
 <p>
-Last Modified: September 12, 2011 18:47:06 
+Last Modified: December 01, 2011 23:09:00 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
