--- a/html/music.html
+++ b/html/music.html
@@ -23,7 +23,7 @@
 <h2 id="toc_1.1">Jazz</h2>
 <ul>
 <li>
-<em>Autumn Leaves</em> in Cannonball Adderley's <em>Somethin' Else</em> is the <strong>most impressive</strong> jazz piece I've ever heard! 
+<em>Autumn Leaves</em> in Cannonball Adderley's <em>Somethin' Else</em> is the <strong>most impressive</strong> jazz piece I've ever heard! Listen also: In San Francisco.
 </li>
 <li>
 John Coltrane's <em>Moment's Notice</em>: <a href="http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0">http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0</a>
@@ -73,7 +73,7 @@ Empire State of Mind, Jay-Z.
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: November 28, 2011 22:56:21 
+Last Modified: December 07, 2011 22:32:25 
 </p>
 
 </body>
